[package]
name = "xlsx_writer"
version = "0.1.5"
edition = "2021"
authors = ["https://twitter.com/8bitTD", "8bittd@gmail.com"]
repository = "https://github.com/8bitTD/xlsx_writer"
keywords = ["windows", "xlsx"]
license = "MIT"
readme = "README.md"
description = "write to xlsx in windows"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs = "0.8.28"
dirs = "3.0"
chrono = "0.4.23"
rm_rf = "0.6.1"